--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,17 @@
 /*  your css code here. If applicable */
+.grid-container{
+	display:flex;
+	flex-wrap:wrap;
+	gap:5px;
+	
+}
+.grid-item{
+	display:flex;
+	background-color:lightgray;
+	height:150px;
+	align-items:center;
+	justify-content:center;
+	width:200px;
+	border-radius:5px;
+	font-size:40px;
+}
