--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,66 @@
 /*  your css code here. If applicable */
 .grid-container{
-	display:flex;
+	display:grid;
 	flex-wrap:wrap;
+	grid-template-columns:repeat(9,1fr);
 	gap:5px;
 	
+}
+@media (min-width:420px){
+	.grid-container{
+	display:grid;
+	flex-wrap:wrap;
+	grid-template-columns:repeat(4,1fr);
+	gap:5px;
+}
+}
+@media (max-width:420px){
+	.grid-container{
+	display:grid;
+	flex-wrap:wrap;
+	grid-template-columns:repeat(4,1fr);
+	gap:5px;
+}
+}
+@media (min-width:600px){
+	.grid-container{
+	display:grid;
+	flex-wrap:wrap;
+	grid-template-columns:repeat(5,1fr);
+	gap:5px;
+}
+}
+@media (min-width:768px){
+	.grid-container{
+	display:grid;
+	flex-wrap:wrap;
+	grid-template-columns:repeat(6,1fr);
+	gap:5px;
+}
+}
+@media (min-width:992px){
+	.grid-container{
+	display:grid;
+	flex-wrap:wrap;
+	grid-template-columns:repeat(7,1fr);
+	gap:5px;
+}
+}
+@media (min-width:1200px){
+	.grid-container{
+	display:grid;
+	flex-wrap:wrap;
+	grid-template-columns:repeat(8,1fr);
+	gap:5px;
+}
+}
+@media (min-width:1420px){
+	.grid-container{
+	display:grid;
+	flex-wrap:wrap;
+	grid-template-columns:repeat(9,1fr);
+	gap:5px;
+}
 }
 .grid-item{
 	display:flex;
