--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,6 @@
 .grid-container {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
   gap: 20px;
 }
 
@@ -19,20 +18,20 @@
 }
 
 /* Additional CSS for responsiveness */
-@media (max-width: 768px) {
-  .grid-item {
-    width: calc(33.33% - 20px);
-  }
-}
-
-@media (max-width: 576px) {
-  .grid-item {
-    width: calc(50% - 20px);
-  }
-}
-
 @media (max-width: 400px) {
   .grid-item {
-    width: calc(100% - 20px);
+	  width:100px;
+  }
+}
+
+@media (min-width: 576px) {
+  .grid-item {
+	  width:120px;
+  }
+}
+
+@media (min-width: 720px) {
+  .grid-item {
+	  width:100px;
   }
 }
