--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,9 @@
 /* Add this CSS code to your stylesheet */
 
 .grid-container {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 20px;
+  display: grid;
+	grid-template-columns:repeat(9,1fr);
+  gap: 10px 10px;
 }
 
 .grid-item {
@@ -19,19 +19,34 @@
 
 /* Additional CSS for responsiveness */
 @media (max-width: 400px) {
-  .grid-item {
-	  width:100px;
+  .grid-container {
+	grid-template-columns:repeat(4,1fr);
+	  
   }
 }
 
-@media (min-width: 576px) {
-  .grid-item {
-	  width:120px;
+@media (max-width: 576px)and(min-width:400px) {
+  .grid-container {
+	grid-template-columns:repeat(6,1fr);
+	  
   }
 }
 
-@media (min-width: 720px) {
-  .grid-item {
-	  width:100px;
+@media (max-width: 900px)and (min-width:701px) {
+  .grid-container {
+	grid-template-columns:repeat(7,1fr);
+	  
+  }
+}
+@media (max-width: 1020px) {
+  .grid-container {
+	grid-template-columns:repeat(8,1fr);
+	  
+  }
+}
+@media (min-width: 501px)and (max-width:699px) {
+  .grid-container {
+	grid-template-columns:repeat(6,1fr);
+	  
   }
 }
