--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,8 @@
 /* CSS for Responsive Grid Layout */
 
 .grid-container {
-  display: flex;
+	display:grid;
+  grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
   flex-wrap: wrap;
   justify-content: center;
 }
@@ -9,7 +10,7 @@
 .grid-item {
   background-color: lightgray;
   height: 150px;
-  width: 200px;
+  width: 100px;
   border-radius: 5px;
   margin: 10px;
   display: flex;
