--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@
 .grid-container {
 	display:grid;
   grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
+	grid-gap:10px 10px;
   flex-wrap: wrap;
   justify-content: center;
 }
