--- a/styles.css
+++ b/styles.css
@@ -9,9 +9,9 @@
 }
 
 .grid-item {
-  background-color: lightgray;
+  background-color:rgb(211, 211, 211);
   height: 150px;
-  width: 100px;
+  width: 200px;
   border-radius: 5px;
   margin: 10px;
   display: flex;
